# cruciverba

./: .cproject  .gitignore  .project  AnalisiParametri.c  Definizioni.c  GestioneDizionario.c  GestioneParole.c  LeggiDaTastiera.c  LeggiDimensioni.c  MettiCasella.c  ProssimaParola.c  PulisciSchema.c  README.md  RiempiSchema.c  ScriviParola.c  StampaDefinizioni.c  TrovaParola.c  compile_commands.json  cruci.h  cruciverba.h  funzioni.h  main.c  meson.build  salvoglobali.h  succ
